--- a/force-app/main/default/lwc/helloWorldManifest/helloWorldManifest.html
+++ b/force-app/main/default/lwc/helloWorldManifest/helloWorldManifest.html
@@ -1,5 +1,5 @@
 <template>
     <lightning-card>
-        <p>Hello Manifest</p>
+        <p>Hello Manifest 4p fdfdm</p>
     </lightning-card>
 </template>
